--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           script: |
             const semver = context.ref.replace('refs/tags/v', '')
+            console.log("SEMVER:: ", semver)
+            console.log("REF:: ", context.ref)
             if (semver.match(/^[0-9]+\.[0-9]+\.[0-9]+$/)) {
               return semver
             }
@@ -32,13 +34,13 @@ jobs:
       - run: npm run all:version ${{ steps.version.outputs.result }}
 
       # Because lerna doesn't update peers deps, although using it "wrongly" this behavior ensures all jellyfish deps are aligned.
-      - name: find and replace peerDependencies
-        run: |
-          find packages/*/package.json -type f -exec sed -i 's#    "defichain": "^0.0.0"#    "defichain": "^${{ steps.version.outputs.result }}"#g' {} \;
+      # - name: find and replace peerDependencies
+      #   run: |
+      #     find packages/*/package.json -type f -exec sed -i 's#    "defichain": "^0.0.0"#    "defichain": "^${{ steps.version.outputs.result }}"#g' {} \;
 
-      - name: Publish
-        run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
-          npm run all:publish
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      # - name: Publish
+      #   run: |
+      #     npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
+      #     npm run all:publish
+      #   env:
+      #     NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
